syntax="proto3";


option  go_package="/genproto";
import  "common.proto";
package protos;

message  RegisterRequest{
       string  user_name=1;
       string email=2;
       string  password_hash=3;
       string  full_name=4;
       string  user_type=5;
}
message  RegisterResponse{
      string  id=1;
      string  user_name=2;
      string email=3;
      string  password_hash=4;
      string full_name=5;
      string  user_type=6;
      string  created_at=7;
}
message LoginRequest{
     string  email=1;
     string  password_hash=2;
}
message  LoginResponse{
  string  accessToken=1;
  string refreshToken=2;
  string expires_in=3;
}
message  Claims {
  string  user_name=2;
  string email=3;
  string  password_hash=4;
  string  user_type=6;
}
message  UserResponse{
   string  id=1;
   string user_name=2;
   string email=3;
   string  full_name=4;
   string  user_type=5;
   string  address=6;
   string phone_number=7;
   string  created_at=8;
   string updated_at=9;
}

message  UpdateUserProfileRequest{

    string  full_name=1;
    string address=2;
    string  phone_number=3;
    string  id=4;
}
service  UserService {
  rpc Register(RegisterRequest)returns(RegisterResponse);
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc UserProfile(IdRequest)returns(UserResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest)returns(UserResponse);
  rpc UpdateToken(UpdateTokenRequest)returns(LoginResponse);


}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}
message  UpdateTokenRequest{
  string  refreshToken=1;
}


